# website

./: .gitignore  CNAME  LICENSE  README.md  contact-me.html  cv.html  index.html  package-lock.json  package.json  projects.html  pyproject.toml  test.html
assets/: styles.css
backend/backend/: settings.py  urls.py
backend/projects/: models.py  serializer.py  urls.py  views.py
backend/projects/migrations/: 0001_initial.py  0002_project_preview_image.py  0003_project_slug.py  0004_project_summary_alter_project_body.py
frontend/app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/app/src/: index.css  main.tsx
frontend/app/src/api/: client.ts  projects.ts  util.ts
frontend/app/src/assets/: icons.tsx
frontend/app/src/components/: ButtonIcon.tsx  ContactForm.tsx  ExternalAnchor.tsx
frontend/app/src/components/Footer/: Footer.tsx
frontend/app/src/components/Navbar/: Navbar.tsx
frontend/app/src/components/ProjectCard/: ProjectCard.tsx
frontend/app/src/components/ui/: badge.tsx
frontend/app/src/routes/: ErrorPage.tsx  LifePage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  Root.tsx
frontend/app/src/routes/HomePage/: AboutMe.tsx  Contact.tsx  FeaturedWorks.tsx  Hero.tsx  HomePage.tsx  TechStack.tsx
frontend/app/src/types/: contact.ts  project.ts
frontend/app/src/utils/: constants.tsx
