[project]
name = "website"
version = "0.1.0"
description = "Portfolio website."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-cors-headers>=4.7.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "markdown>=3.8.2",
    "pillow>=11.3.0",
]
